<resources>
    <string name="app_name" translatable="false">Mo Neza</string>
    <string name="title_activity_onboarding" translatable="false">Mo Neza by RMSoft</string>
    <string name="title_activity_qr" translatable="false">QR Code</string>
    <string name="title_activity_main" translatable="false">Mo Neza</string>

    <string name="withdraw">Kubikuza</string>
    <string name="balance">Kureba Asigaye</string>
    <string name="more_codes">Izindi kode</string>
    <string name="language">Change Language</string>
    <string name="agreements">Amasezerano</string>
    <string name="share">Gusangiza</string>
    <string name="spam">Ubutubuzi</string>
    <string name="reset">Gusiba byose</string>

    <string name="more">ibindi…</string>
    <string name="yes">Twagiye!</string>

    <string name="number_text_hint">Nimero, Kode, etc.</string>
    <string name="cash_text_hint">Amafaranga</string>

    <string name="chip_food">guhaha 🌾</string>
    <string name="chip_basic">kubaho 🏠</string>
    <string name="chip_transport">kugenda 🚌</string>
    <string name="chip_self_care">kwiyitaho 💇</string>
    <string name="chip_experience">kwaguka 📚</string>
    <string name="chip_giving">gutanga 🌹</string>
    <string name="chip_clothes">kwambara 👖</string>
    <string name="chip_fun">gusohoka 🍻</string>
    <string name="chip_pets">gukina 🎮</string>

    <string name="airtime">Kwigurira ama unites</string>
    <string name="send">Kohereza</string>
    <string name="pay">Kwishyura</string>

    <string name="days_range">Kuva %1$s kugera %2$s</string>
    <string name="gained">Ayinjiye: </string>
    <string name="spent">Ayasohotse: </string>
    <string name="opening_balance">Watangiranye: </string>
    <string name="closing_balance">Warangizanye: </string>
    <string name="dash_balance">Asigaye: </string>

    <string name="dash_withdraws">kubikuza: </string>
    <string name="dash_deposits">Kubitsa: </string>
    <string name="dash_received">Kwakira: </string>
    <string name="dash_fees">Komisiyo: </string>
    <string name="dash_payments">Kwishyura: </string>
    <string name="dash_transfers">Kohereza: </string>
    <string name="dash_total">Yose Hamwe: </string>

    <string name="your_number">Nimero yawe</string>

    <string name="lst_fee"> + komisiyo: </string>
    <string name="lst_balance">hasigaye: </string>
    <string name="lst_time"> saa </string>

    <string name="amount_error">Goddamn it</string>
    <string name="hint_number">nimero</string>
    <string name="hint_code">kode y\'umucuruzi</string>
    <string name="hint_irembo">kode y\'irembo</string>
    <string name="hint_cash_power">kashi pawa / irembo</string>

    <string name="delete_title">Urashaka gusiba koko?</string>
    <string name="delete_content">Ama kode yose wabitse ntago uzongera kuyabona!</string>
    <string name="delete_yes">Sawa</string>
    <string name="delete_no">Kureka</string>

    <string name="searching">gushaka…</string>
    <string name="share_content">Porogaramu ya mbere nziza izagufasha mw\'igenzuramibare ry\'amafaranga ukoresha.</string>

    <string name="next">Komeza</string>
    <string name="confirm">Kwemeza</string>


    <string-array name="planets_array">
        <item>Icyumweru</item>
        <item>Ukwezi</item>
        <item>Ibindi…</item>
    </string-array>


    <string name="text_challenge">Kugira ngo ukomeze, uzuza umubare/inyuguti ibura:</string>
    <string name="title_activity_more_codes">Izindi kode</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

</resources>