<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".home.ActionsFragment">

    <ScrollView
        android:layout_width="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lav_thumbUp"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="0dp"
                android:layout_gravity="center"
                android:layout_marginBottom="24dp"
                app:lottie_autoPlay="true"
                app:lottie_fileName="sun.json"
                app:lottie_loop="true" />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/number_layout"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_margin="8dp"
                android:textSize="24sp"
                android:hint="@string/number_text_hint"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxCornerRadiusTopStart="16dp"
                app:boxCornerRadiusTopEnd="16dp"
                app:boxCornerRadiusBottomStart="16dp"
                app:boxCornerRadiusBottomEnd="16dp"
                app:boxStrokeColor="@color/colorSecondary"
                app:hintTextColor="@color/colorSecondaryDark">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/number"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:padding="16dp"
                    android:drawableRight="@drawable/ic_contact_book"
                    android:drawableEnd="@drawable/ic_contact_book"
                    android:drawableStart="@drawable/ic_smartphone"
                    android:drawableLeft="@drawable/ic_smartphone"
                    android:drawablePadding="16dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:digits="0123456789ABCDEF "
                    android:inputType="phone"
                    android:maxLength="15"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/amount_layout"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="0dp"
                android:inputType="phone"
                android:hint="@string/cash_text_hint"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxStrokeColor="@color/colorSecondary"
                app:hintTextColor="@color/colorSecondaryDark"
                app:errorTextColor="@color/red"
                app:errorIconTint="@color/red"
                app:boxStrokeErrorColor="@color/red"
                app:boxCornerRadiusTopStart="16dp"
                app:boxCornerRadiusTopEnd="16dp"
                app:boxCornerRadiusBottomStart="16dp"
                app:boxCornerRadiusBottomEnd="16dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/amount"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:padding="16dp"
                    android:layout_width="match_parent"
                    android:drawableStart="@drawable/ic_money_1_"
                    android:drawableLeft="@drawable/ic_money_1_"
                    android:drawablePadding="16dp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:padding="0dp"
                android:layout_marginBottom="0dp">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chipGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:singleLine="true">

                    <com.google.android.material.chip.Chip
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="0dp"
                        android:layout_marginTop="0dp"
                        android:layout_marginBottom="0dp"
                        android:text="@string/chip_food"
                        app:chipStrokeWidth="1dp"
                        app:chipStrokeColor="@color/colorPrimary"/>

                    <com.google.android.material.chip.Chip
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="0dp"
                        android:layout_marginTop="0dp"
                        android:layout_marginBottom="0dp"
                        android:text="@string/chip_basic"
                        app:chipStrokeWidth="1dp"
                        app:chipStrokeColor="@color/colorPrimary"/>

                    <com.google.android.material.chip.Chip
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="0dp"
                        android:layout_marginTop="0dp"
                        android:layout_marginBottom="0dp"
                        android:text="@string/chip_transport"
                        app:chipStrokeWidth="1dp"
                        app:chipStrokeColor="@color/colorPrimary"/>

                    <com.google.android.material.chip.Chip
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="0dp"
                        android:layout_marginTop="0dp"
                        android:layout_marginBottom="0dp"
                        android:text="@string/chip_self_care"
                        app:chipStrokeWidth="1dp"
                        app:chipStrokeColor="@color/colorPrimary"/>

                    <com.google.android.material.chip.Chip
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="0dp"
                        android:layout_marginTop="0dp"
                        android:layout_marginBottom="0dp"
                        android:text="@string/chip_experience"
                        app:chipStrokeWidth="1dp"
                        app:chipStrokeColor="@color/colorPrimary"/>

                    <com.google.android.material.chip.Chip
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="0dp"
                        android:layout_marginTop="0dp"
                        android:layout_marginBottom="0dp"
                        android:text="@string/chip_giving"
                        app:chipStrokeWidth="1dp"
                        app:chipStrokeColor="@color/colorPrimary"/>

                    <com.google.android.material.chip.Chip
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="0dp"
                        android:layout_marginTop="0dp"
                        android:layout_marginBottom="0dp"
                        android:text="@string/chip_clothes"
                        app:chipStrokeWidth="1dp"
                        app:chipStrokeColor="@color/colorPrimary"/>

                    <com.google.android.material.chip.Chip
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="0dp"
                        android:layout_marginTop="0dp"
                        android:layout_marginBottom="0dp"
                        android:text="@string/chip_fun"
                        app:chipStrokeWidth="1dp"
                        app:chipStrokeColor="@color/colorPrimary"/>

                    <com.google.android.material.chip.Chip
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="0dp"
                        android:layout_marginTop="0dp"
                        android:layout_marginBottom="0dp"
                        android:text="@string/chip_pets"
                        app:chipStrokeWidth="1dp"
                        app:chipStrokeColor="@color/colorPrimary"/>

                </com.google.android.material.chip.ChipGroup>

            </HorizontalScrollView>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/action_balance"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginBottom="40dp"
                android:layout_marginTop="24dp"
                android:layout_width="match_parent"
                android:padding="16dp"
                android:background="@drawable/button_bg"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/amount_layout"
                android:text="@string/next"
                />
            <LinearLayout
                android:id="@+id/bottom_button"
                android:layout_height="160dp"
                android:layout_width="match_parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/amount_layout"
                android:orientation="horizontal">
            </LinearLayout>
        </LinearLayout>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>