<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".home.dashboard.DashboardFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">


            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:singleLine="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="0dp"
                    android:text="day"
                    app:chipStrokeWidth="1dp"
                    android:checked="true"
                    app:chipStrokeColor="@color/colorPrimary"/>
                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_week"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="0dp"
                    android:text="week"
                    app:chipStrokeWidth="1dp"
                    app:chipStrokeColor="@color/colorPrimary"/>
                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_month"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="0dp"
                    android:text="month"
                    app:chipStrokeWidth="1dp"
                    app:chipStrokeColor="@color/colorPrimary"/>
                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_custom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="0dp"
                    android:text="custom"
                    app:chipStrokeWidth="1dp"
                    app:chipStrokeColor="@color/colorPrimary"/>
            </com.google.android.material.chip.ChipGroup>
        </HorizontalScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp"
            android:padding="16dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/balance" />
            <TextView
                android:id="@+id/dash_closing"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:shadowColor="@color/colorAccent"
                android:textSize="32sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
                <LinearLayout
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="16dp"
                    android:layout_weight=".5"
                    android:layout_width="0dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gained" />
                    <TextView
                        android:id="@+id/dash_savings"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="700" />
                    <com.github.anastr.speedviewlib.ImageSpeedometer
                        android:id="@+id/speedView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:sv_speedometerWidth="8dp"
                        app:sv_indicatorColor="@color/colorPrimaryDark"
                        app:sv_markColor="@color/colorAccent"
                        app:sv_withTremble="false"
                        app:sv_unit=""
                        app:sv_centerCircleRadius="8dp"
                        app:sv_indicatorWidth="4dp"
                        app:sv_endDegree="370"
                        app:sv_startDegree="170"
                        app:sv_speedTextFormat="INTEGER"
                        app:sv_withIndicatorLight="true"
                        app:sv_indicatorLightColor="@color/colorAccent"
                        app:sv_image="@drawable/ic_drawing"
                        app:sv_indicator="NeedleIndicator"
                        app:sv_speedTextSize="0sp"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="16dp"
                    android:layout_weight=".5"
                    android:layout_width="0dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/spent" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=" - " />
                        <TextView
                            android:id="@+id/dash_spendings"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="300" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=" - " />
                        <TextView
                            android:id="@+id/dash_fee"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=" 300 "/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=" Fee" />
                    </LinearLayout>

                    <com.github.anastr.speedviewlib.ImageSpeedometer
                        android:id="@+id/speedView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:sv_speedometerWidth="8dp"
                        app:sv_indicatorColor="@color/colorPrimaryDark"
                        app:sv_markColor="@color/colorAccent"
                        app:sv_withTremble="false"
                        app:sv_centerCircleRadius="8dp"
                        app:sv_indicatorWidth="4dp"
                        app:sv_endDegree="370"
                        app:sv_startDegree="170"
                        app:sv_speedTextFormat="INTEGER"
                        app:sv_withIndicatorLight="true"
                        app:sv_indicatorLightColor="@color/colorAccent"
                        app:sv_image="@drawable/ic_drawing"
                        app:sv_indicator="NeedleIndicator"
                        app:sv_unit=""
                        app:sv_unitUnderSpeedText="true"
                        app:sv_unitTextColor="@color/red"
                        app:sv_speedTextSize="0sp"/>
                </LinearLayout>
        </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="16dp">

                <com.db.williamchart.view.LineChartView
                    android:id="@+id/lineChart"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_margin="20dp"
                    app:chart_axis="xy"
                    app:chart_gridEffect="dotted"
                    app:chart_labelsColor="#FF70977F"
                    app:chart_labelsSize="10sp"
                    app:chart_lineThickness="2dp"
                    app:chart_smoothLine="true"

                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="8dp">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/opening_balance" />
                    <TextView
                        android:id="@+id/dash_starting"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end" />
                </LinearLayout>

            </LinearLayout>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="2"

                android:layout_margin="16dp">

                <TextView
                    android:layout_columnWeight="3"
                    android:text="@string/dash_deposits"
                    android:layout_marginBottom="8dp" />

                <TextView
                    android:id="@+id/dash_deposit"
                    android:layout_columnWeight="2"
                    android:text="100"
                    android:layout_marginBottom="8dp"
                    android:gravity="end"/>

                <TextView
                    android:layout_columnWeight="3"
                    android:text="@string/dash_received"
                    android:layout_marginBottom="8dp" />

                <TextView
                    android:id="@+id/dash_received"
                    android:layout_columnWeight="2"
                    android:text="100"
                    android:layout_marginBottom="8dp"
                    android:gravity="end" />

                <TextView
                    android:layout_columnWeight="3"
                    android:text="@string/dash_withdraws"
                    android:layout_marginBottom="8dp" />

                <TextView
                    android:id="@+id/dash_withdraws"
                    android:layout_columnWeight="2"
                    android:text="100"
                    android:layout_marginBottom="8dp"
                    android:gravity="end" />

                <TextView
                    android:layout_columnWeight="3"
                    android:text="@string/dash_transfers"
                    android:layout_marginBottom="8dp" />

                <TextView
                    android:id="@+id/dash_sent"
                    android:layout_columnWeight="2"
                    android:text="100"
                    android:layout_marginBottom="8dp"
                    android:gravity="end" />

                <TextView
                    android:layout_columnWeight="3"
                    android:text="@string/dash_payments"
                    android:layout_marginBottom="8dp" />

                <TextView
                    android:id="@+id/dash_payments"
                    android:layout_columnWeight="2"
                    android:text="100"
                    android:layout_marginBottom="8dp"
                    android:gravity="end" />

                <TextView
                    android:layout_columnWeight="3"
                    android:text="@string/dash_total"
                    android:paddingTop="20dp"
                    android:layout_marginBottom="8dp"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/dash_total"
                    android:layout_columnWeight="2"
                    android:text="100"
                    android:paddingTop="20dp"
                    android:layout_marginBottom="8dp"
                    android:gravity="end"
                    android:visibility="gone" />

                <TextView
                    android:layout_columnWeight="3"
                    android:text="@string/dash_fees"
                    android:layout_marginBottom="8dp" />

                <TextView
                    android:id="@+id/dash_commission"
                    android:layout_columnWeight="2"
                    android:text="100"
                    android:layout_marginBottom="8dp"
                    android:gravity="end" />


                <TextView
                    android:layout_columnWeight="3"
                    android:text="@string/balance"
                    android:paddingTop="20dp"
                    android:layout_marginBottom="8dp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/dash_balance"
                    android:layout_columnWeight="2"
                    android:text="100"
                    android:paddingTop="20dp"
                    android:layout_marginBottom="8dp"
                    android:gravity="end"/>
            </GridLayout>
    </LinearLayout>
</ScrollView>